--- a/package.json
+++ b/package.json
@@ -3,8 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.25.0",
+    "node-sass": "^4.13.0",
+    "query-string": "^6.9.0",
+    "rc-pagination": "^1.20.11",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-player": "^1.14.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
   },
   "scripts": {
